<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/allMovies"
        android:title="@string/ctxtMenuItemAll" />
    <item
        android:id="@+id/action"
        android:title="@string/ctxtMenuItemAction" />
    <item
        android:id="@+id/adventure"
        android:title="@string/ctxtMenuItemAdventure" />
    <item
        android:id="@+id/comedy"
        android:title="@string/ctxtMenuItemComedy" />
    <item
        android:id="@+id/drama"
        android:title="@string/ctxtMenuItemDrama" />
    <item
        android:id="@+id/fantasy"
        android:title="@string/ctxtMenuItemFantasy" />
    <item
        android:id="@+id/mystery"
        android:title="@string/ctxtMenuItemMystery" />
    <item
        android:id="@+id/romance"
        android:title="@string/ctxtMenuItemRomance" />
    <item
        android:id="@+id/scifi"
        android:title="@string/ctxtMenuItemSciFi" />
    <item
        android:id="@+id/thriller"
        android:title="@string/ctxtMenuItemThriller" />
</menu>