<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movietheater"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".NewMovie">

    <TextView
        android:id="@+id/txtVw_newMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/txtVw_newMovieTitle"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtxt_movieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_bg_color"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/edtxt_newMovietitle"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_selectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_bg_color"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_datePicker"
            android:textColor="@android:color/black"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtVw_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edittext_bg_color"
            android:gravity="center"
            android:hint="MM/DD/YYYY"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spn_genre"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_bg_color"
            android:gravity="center"
            android:popupBackground="@drawable/edittext_bg_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dialog_edtxt_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg_color"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/edtxt_commentsHint"
            android:inputType="textMultiLine"
            android:lines="3"
            android:overScrollMode="always"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:paddingRight="10dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_bg_color"
            android:text="@string/btn_save"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>